--- a/src/resources/css/Slider.css
+++ b/src/resources/css/Slider.css
@@ -1,38 +1,101 @@
-.slider-container {
+.container {
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  width: 300px;
+  justify-content: center;
 }
 
 .slider {
-  width: calc(50% - 10px); /* Adjusted width for both sliders */
-  margin: 10px 5px;
+  position: relative;
+  width: 200px;
 }
 
-.left-slider {
-  order: 1; /* To place left slider above right slider */
+.slider__track,
+.slider__range,
+.slider__left-value,
+.slider__right-value {
+  position: absolute;
 }
 
-.right-slider {
-  order: 2; /* To place right slider below left slider */
+.slider__track,
+.slider__range {
+  border-radius: 3px;
+  height: 5px;
 }
 
-.slider-values {
-  display: flex;
-  justify-content: space-between;
+.slider__track {
+  background-color: #ced4da;
   width: 100%;
+  z-index: 1;
 }
 
-.slider-values span {
-  width: calc(50% - 10px); /* Adjusted width for both spans */
-  text-align: center;
+.slider__range {
+  background-color: #5e83cd;
+  z-index: 2;
 }
 
-.slider-values span:first-child {
-  text-align: left;
+.slider__left-value,
+.slider__right-value {
+  color: #43464a;
+  font-size: 12px;
+  margin-top: 20px;
 }
 
-.slider-values span:last-child {
-  text-align: right;
+.slider__left-value {
+  left: 6px;
+}
+
+.slider__right-value {
+  right: -4px;
+}
+
+/* Removing the default appearance */
+.thumb,
+.thumb::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.thumb {
+  pointer-events: none;
+  position: absolute;
+  height: 0;
+  width: 200px;
+  outline: none;
+}
+
+.thumb--left {
+  z-index: 3;
+}
+
+.thumb--right {
+  z-index: 4;
+}
+
+/* For Chrome browsers */
+.thumb::-webkit-slider-thumb {
+  background-color: #f1f5f7;
+  border: none;
+  border-radius: 50%;
+  box-shadow: 0 0 1px 1px #ced4da;
+  cursor: pointer;
+  height: 18px;
+  width: 18px;
+  margin-top: 4px;
+  pointer-events: all;
+  position: relative;
+}
+
+/* For Firefox browsers */
+.thumb::-moz-range-thumb {
+  background-color: #f1f5f7;
+  border: none;
+  border-radius: 50%;
+  box-shadow: 0 0 1px 1px #ced4da;
+  cursor: pointer;
+  height: 18px;
+  width: 18px;
+  margin-top: 4px;
+  pointer-events: all;
+  position: relative;
 }
