--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,26 @@
+body {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
 
+body::-webkit-scrollbar {
+  width: 5px;
+}
 
+/* Track */
+body::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px 10px;
+}
+
+/* Handle */
+body::-webkit-scrollbar-thumb {
+  background: #7646d7;
+  border-radius: 10px 10px;
+}
+
+/* Handle on hover */
+body::-webkit-scrollbar-thumb:hover {
+  background: #9265ec;
+}
